syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

import "DatabaseExtension.Proto/Filters/Filter.proto";

message GetAuditLogsRequest {
    DatabaseExtension.Filter Filter = 1;
}

message GetUserAuditRequest {
    DatabaseExtension.Filter Filter = 1;

    repeated string UserNames = 2;
    repeated string SubdivisionIds = 3;
}

message GetSubdivisionAuditRequest {
    DatabaseExtension.Filter Filter = 1;

    repeated string SubdivisionIds = 2;
}

message GetSystemAuditRequest {
    DatabaseExtension.Filter Filter = 1;
}

message AuditCreateCommand {
    string UserName = 1;

    string IpAddress = 2;

    string Message = 3;
    string Action = 4;
}
